--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-AlgebraicTemplate = "b66562e1-fa90-4e8b-9505-c909188fab76"
+CategoricalTensorNetworks = "b369e0ec-beea-4e3a-b4d0-cd2e7e44da01"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
