--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,8 @@ version = "0.0.1"
 
 [deps]
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 Catlab = "^0.16"
