--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,9 @@
 [deps]
 CategoricalTensorNetworks = "b369e0ec-beea-4e3a-b4d0-cd2e7e44da01"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
+TikzPictures = "37f6aa50-8035-52d0-81c2-5a1d08754b2d"
