--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -7,3 +7,4 @@ Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 TikzPictures = "37f6aa50-8035-52d0-81c2-5a1d08754b2d"
+Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
